--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@types/express": "^5.0.3",
     "@types/node": "^24.7.2",
     "nodemon": "^3.1.10",
+    "prisma": "^6.18.0",
     "tsx": "^4.20.6",
     "typescript": "~5.8.3",
     "vite": "^7.1.2"
   },
   "dependencies": {
+    "@prisma/client": "^6.18.0",
     "@tailwindcss/vite": "^4.1.13",
     "cors": "^2.8.5",
     "express": "^5.1.0",
