--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "server": "nodemon --watch server --exec tsx server/index.ts",
-    "server:build": "tsc --project tsconfig.server.json"
+    "server:build": "tsc --project tsconfig.server.json",
+    "prisma:generate": "prisma generate",
+    "prisma:studio": "prisma studio",
+    "prisma:migrate": "prisma migrate dev"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
