--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
-    "@types/node": "^24.7.2",
+    "@types/node": "^24.10.0",
     "nodemon": "^3.1.10",
     "prisma": "^6.18.0",
     "tsx": "^4.20.6",
@@ -33,6 +33,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "openai": "^6.8.0",
     "tailwindcss": "^4.1.13"
   }
 }
