Added marked DOMPurify and highlight.js to the chatViewer

--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
+    "@types/dompurify": "^3.0.5",
     "@types/express": "^5.0.3",
+    "@types/marked": "^5.0.2",
     "@types/node": "^24.10.0",
     "nodemon": "^3.1.10",
     "prisma": "^6.18.0",
@@ -31,8 +33,11 @@
     "@prisma/client": "^6.18.0",
     "@tailwindcss/vite": "^4.1.13",
     "cors": "^2.8.5",
+    "dompurify": "^3.3.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "highlight.js": "^11.11.1",
+    "marked": "^16.4.2",
     "openai": "^6.8.0",
     "tailwindcss": "^4.1.13"
   }
