--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "highlight.js": "^11.11.1",
     "marked": "^16.4.2",
     "openai": "^6.8.0",
+    "replicate": "^1.3.1",
     "tailwindcss": "^4.1.13"
   }
 }
