Added env example

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
 # .env.example
 DATABASE_URL="file:./dev.db"
 PORT=3100
+
+# Ollama Configuration
+OLLAMA_BASE_URL=http://localhost:11434/v1
+OLLAMA_MODEL=gpt-oss
+OLLAMA_VISION_MODEL=llava
